[package]
name = "rustfire"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A crate that allows you to use Rust to generate DiamondFire templates."
homepage = "https://crates.io/crates/rustfire"
documentation = "https://docs.rs/rustfire"
readme = "README.md"
repository = "https://github.com/akarahdev/rustfire"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
minifier = "0.2.2"
libflate = "1.2.0"
clipboard = "0.5.0"